After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745719 - video-converter: doesn't work properly with YUY2 and right border
video-converter: doesn't work properly with YUY2 and right border
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-06 03:48 UTC by RaviKiran
Modified: 2015-03-06 11:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
correct right-border location for YUY2 YVYU UYVY (976 bytes, patch)
2015-03-06 03:55 UTC, RaviKiran
none Details | Review

Description RaviKiran 2015-03-06 03:48:59 UTC
Following conversions don't work properly.
YUY2 -> YUY2 with right border, YVYU -> YVYU with right border,
UYVY -> UYVY with right border.

In all those cases border is placed placed at center.

And if we add left border along with right border, sometimes it crashes.
with left border = right border = 50 pixels, it crashed.
Comment 1 RaviKiran 2015-03-06 03:55:55 UTC
Created attachment 298678 [details] [review]
correct right-border location for YUY2 YVYU UYVY

r_border /= 2; in convert_fill_border takes the right-border to incorrect location. Patch attached, please review.
Comment 2 Nicolas Dufresne (ndufresne) 2015-03-06 03:57:56 UTC
Would it be possible to provide a test that demonstrate the issue ?
Comment 3 RaviKiran 2015-03-06 04:07:44 UTC
I tried with videobox (with patch in #737401) added left and right borders.
(videotestsrc ! video/x-raw,format={YUY2} ! videobox left=-50 right=-50 fill=red ! video/x-raw,format={YUY2} ! videoconvert ! ximagesink) 
I think Wim added a few tests for video-converter lib recently.
Comment 4 Wim Taymans 2015-03-06 11:32:48 UTC
commit 6bd458abc1d5068e4f072b8c76e4d5f6fa5b5635
Author: Ravi Kiran K N <ravi.kiran@samsung.com>
Date:   Fri Mar 6 09:30:51 2015 +0530

    video-converter: correct right-border location for YUY2, YVYU, UYVY
    
    Remove 'r_border /= 2' in convert_fill_border(). It doesn't
    take the right border to correct location.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=745719